# setup-poetry

./: .gitignore  .prettierrc.json  LICENSE  README.md  action.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: check-dist.yml  test.yml
__tests__/: main.test.ts
src/: install-dependencies.ts  main.ts  poetry.ts  utils.ts
