[tool.poetry]
name = "example-project"
version = "1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
